fixat scrollbar på chatten

--- a/webchat/styles/styles.css
+++ b/webchat/styles/styles.css
@@ -82,6 +82,7 @@ button{
 	padding:5px 5px 5px 5px;
 	text-align:left;
 	float:left;
+	overflow-y: scroll;
 }
 
 .chatPostLine{
